--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -2201,8 +2201,8 @@
   "cooking.guide.one": "烹饪可以让您滋养您的 Bumpkin 并帮助他们获得宝贵的经验值 (XP)。利用收获的庄稼，您可以在不同的、专门用于烹饪的建筑物中准备美味的食物。",
   "cooking.guide.three": "要做饭，只需选择建筑物并选择要烹饪的食谱即可。食谱将列出所需食材、食用时获得的 XP 和烹饪时长等详细信息。开始烹饪后，留意计时器以了解何时可以盛出食物。",
   "cooking.guide.five": "尝试不同的食谱、解锁新建筑、在培育 Bumpkin 的同时发现烹饪的乐趣，在Sunflower Land 踏上美味的烹饪冒险之旅。",
-  "animals.guide.two": "每只鸡的头顶上方都有一个指示器，显示其当前的心情或需求。这可能包括饥饿、疲倦、快乐和可产蛋。为了维持鸡的饱腹感和生产力，请通过库存选择小麦并与鸡互动来喂它们。喂食会启动产蛋计时器，鸡准备好产蛋需要 48 小时。鸡准备好产蛋后，来到您的农场，查看每只鸡上方的图标，并与它们互动，看看您的鸡孵出了什么类型的鸡或鸡蛋。偶尔，您甚至可能会发现稀有的突变鸡，它们具有特殊的加成作用，例如加速产蛋、提高产量或减少食物消耗。",
-  "animals.guide.three": "在 Sunflower Land 养鸡并收集鸡蛋，为您的农场增添了动态的产出机制。尝试食谱、在制作过程中使用鸡蛋、享受稀有突变鸡带来的惊喜。在 Sunflower Land 中拥抱迷人的小鸡世界，建立一个蓬勃发展的家禽产业，并享受您辛勤工作的成果。",
+  "animals.guide.two": "每只鸡的头顶上方都有一个指示器，显示其当前的心情或需求。这可能包括饥饿、疲倦、快乐和可产蛋。为了维持鸡的饱腹感和生产力，请通过库存选择小麦并与鸡互动来喂它们。喂食会启动产蛋计时器，鸡准备好产蛋需要 48 小时。鸡准备好产蛋后，来到您的农场，查看每只鸡上方的图标，并与它们互动，看看您的鸡孵出了什么类型的鸡或鸡蛋。偶尔，您甚至可能会发现稀有的变种鸡，它们具有特殊的加成作用，例如加速产蛋、提高产量或减少食物消耗。",
+  "animals.guide.three": "在 Sunflower Land 养鸡并收集鸡蛋，为您的农场增添了动态的产出机制。尝试食谱、在制作过程中使用鸡蛋、享受稀有变种鸡带来的惊喜。在 Sunflower Land 中拥抱迷人的小鸡世界，建立一个蓬勃发展的家禽产业，并享受您辛勤工作的成果。",
   "crafting.guide.one": "在 Sunflower Land，锻造 NFT 是提高农业产量和加快进度的关键环节。这些特殊物品提供各种加成，例如庄稼生长加成、烹饪增强和资源加成，这可以极大地加快你的旅程。通过积攒硬币，您可以锻造工具、收集资源并拓张地块，以进一步建立您的农业帝国。",
   "crafting.guide.four": "通过锻造并明智地选择装备，您可以增强您的耕作能力，建造一个引以为豪的岛屿家园，并加快你在 Sunflower Land 的进度。",
   "deliveries.intro": "旅行并送货以获得奖励。",
@@ -2285,7 +2285,7 @@
   "interactableModals.windmill.message": "啊，我的风车还在维修，在我修理的时候不允许任何人窥探，稍后再来吧。",
   "interactableModals.igorHome.message": "离远点！我没心情待客，尤其是像你这样多管闲事的人！",
   "interactableModals.potionHouse.message1": "小心朋友，那个疯狂科学家住在里面！",
-  "interactableModals.potionHouse.message2": "有传言说他们正在寻找乡包佬学徒来和他们一起种植突变作物。",
+  "interactableModals.potionHouse.message2": "有传言说他们正在寻找乡包佬学徒来和他们一起种植变种作物。",
   "interactableModals.guildHouse.message": "停步乡包佬！如果你想进入公会楼屋，你得有一个蕾芽。",
   "interactableModals.bettyHome.message": "哦，亲爱的，尽管我很爱我的庄稼，但我的家是私人空间，现在可不供游览。",
   "interactableModals.bertHome.message": "入侵者！他们一定是看上了我收藏的稀有藏品和秘密，不能让他们进来！",
@@ -3038,7 +3038,7 @@
   "season.codex.seasonalDrops.description": "与其他人争夺最稀有的物品！更多详情，请访问广场的拍卖行。",
   "season.codex.soldOut": "已售罄",
   "season.codex.mutants": "变异体",
-  "season.codex.mutants.discover": "探索时季突变体！",
+  "season.codex.mutants.discover": "探索时季变种体！",
   "season.codex.mutants.one": "收集鸡蛋来发现 {{item}}。",
   "season.codex.mutants.two": "在深海钓鱼以捕获 {{item}}。",
   "season.codex.mutants.three": "尝试种花卉来发现 {{item}}。",
@@ -3372,7 +3372,7 @@
   "description.factionShop.sunflorianGoldChampion": "杰出的 Sunflorian 冠军，因其英勇和坚定不移的决心而备受尊敬。",
   "description.factionShop.sunflorianSilverChampion": "备受尊敬的 Sunflorian 竞争选手，因其优雅和战略敏锐度而远近闻名。",
   "description.factionShop.sunflorianBronzeChampion": "光芒四射的 Sunflorian 冠军，因其勇气和高尚的精神而远近闻名。",
-  "description.desert.rose": "一种可以在法老秘宝季节找到的突变花。",
+  "description.desert.rose": "一种可以在法老秘宝季节找到的变种花。",
   "description.camel.bone": "一只远古骆驼的骨头，据传骆驼曾被用来运送文物",
   "description.cockle.shell": "漂亮的外壳。",
   "description.hieroglyph": "解开象形文字的秘密。",
@@ -3419,7 +3419,7 @@
   "scavenger.guide.one": "在 Sunflower Land 搜刮物品为发现隐藏的宝藏和锻造贵重物品提供了令人兴奋的机会。搜刮的第一个选项是在挖掘区挖宝，在那里你可以成为海盗寻宝者。通过冒险前往这个位于海滩北部的区域、在 Jafar 的商店锻造沙铲或沙钻，您可以在沙地挖掘以发现各种宝藏。",
   "scavenger.guide.two": "另一种选项的搜刮是收集野生和魔法蘑菇，这些蘑菇会自然出现在您的农场和周围的岛屿上。这些蘑菇可以被免费收集并用于食谱、任务和物品锻造。留意这些蘑菇，因为它们以不同的间隔补充。野生蘑菇每 16 小时刷新一次，您的农场最多只能生成 5 个野生蘑菇。在新手岛上，魔法蘑菇每 48 小时刷新一次，在春花岛上每 36 小时刷新一次，在沙漠岛上每隔 24 小时刷新一次，农场上最多可补充 3 个魔法蘑菇。如果您的土地已满，蘑菇就会出现在周围的岛屿上，确保您没有错过这些宝贵的资源。",
   "fruit.guide.two": "要种植水果，您需要获得更大的水果树坑，需要升级到春花岛后方可获取。",
-  "seasons.guide.one": "Sunflower Land 的时季为游戏带来了刺激和新鲜感，为玩家提供了新的挑战和机遇。在每个时季中，玩家都可以期待各种新的穿戴品和收藏品、时季突变体和稀有宝藏，从而创造出动态和不断变化的游戏体验。这鼓励玩家调整策略，在农场上探索新的可能性。此外，时季票券为游戏增添了策略玩法。玩家必须决定如何明智地分配门票，无论是收集稀有物品、选择装潢和装饰品，还是用票券兑换硬币。时季机制使游戏保持吸引力，并确保 Sunflower Land 总有值得期待的东西。",
+  "seasons.guide.one": "Sunflower Land 的时季为游戏带来了刺激和新鲜感，为玩家提供了新的挑战和机遇。在每个时季中，玩家都可以期待各种新的穿戴品和收藏品、时季变种体和稀有宝藏，从而创造出动态和不断变化的游戏体验。这鼓励玩家调整策略，在农场上探索新的可能性。此外，时季票券为游戏增添了策略玩法。玩家必须决定如何明智地分配门票，无论是收集稀有物品、选择装潢和装饰品，还是用票券兑换硬币。时季机制使游戏保持吸引力，并确保 Sunflower Land 总有值得期待的东西。",
   "keys": "钥匙",
   "seasonedFarmer.description": "收集 50 张时季票券",
   "crops.guide.two": "要种植庄稼，您需要从 Betty 的市场购买相应的种子。每种庄稼的生长时间不同，从向日葵的生长时间仅为 1 分钟到羽衣甘蓝的 36 小时不等。庄稼完全种植后，您可以收获它们并获得回报。",
@@ -3522,7 +3522,7 @@
   "competition.hurry": "快点，在时间结束之前赶紧耕作！",
   "competition.connectFSL": "连接 FSL ID",
   "competition.bonusGift": "额外奖励礼物",
-  "competition.createID": "您必须创建 FSL ID 才能参加本次比赛并领取奖品。",
+  "competition.createID": "您必须创建 FSL ID 才能参加本次竞赛并领取奖品。",
   "competition.connect.one": "1、访问 https://id.fsl.com/login 并注册 FSL ID。",
   "competition.connect.two": "2、连接您下列的 FSL ID。",
   "competition.connect": "连接",
@@ -3905,128 +3905,128 @@
   "farmHand": "雇农",
   "description.petting.hand": "爱抚手套。用它来表达对动物的爱意。",
   "animal.toolRequired": "需要 {{tool}}",
-  "description.gold.egg.boost": "免费喂鸡",
+  "description.gold.egg.boost": "鸡饲料免费",
   "easterEgg.halloweenBook": "?????",
-  "easterEgg.halloweenBookText": "有些地方比时间本身还要久远，有些地方则没有光明。你不该来这里 在这片森林里，树木悄悄诉说着被遗忘时代的秘密 到处都潜伏着阴影 耐心等待机会吞噬任何敢于闪耀的光源 这里没有冒险者的容身之地……",
-  "halloween.sacrifice.intro.one": "据说在一个没有月亮的夜晚，在古老的大树下，一位女巫聚集了地球上最多样、最强大的精灵。",
-  "halloween.sacrifice.intro.two": "每个精灵都有不同的回声，目光中闪烁着独特的光芒，每个精灵都根据古老的誓言被献给神圣的圆圈。",
-  "halloween.sacrifice.intro.three": "当所有的精灵都到齐时，森林为之颤抖，在金绿色的闪光中，一个强大的生物诞生了，它注入了被召唤者的力量和智慧。",
-  "halloween.sacrifice.intro.four": "只有了解每个精灵的奥秘并将它们完美融合的人，才有资格获得这种祝福……但要小心，因为这种力量不是谁都能拥有的。",
+  "easterEgg.halloweenBookText": "有些地方比时间本身还要久远，有些地方则连光明也无法照耀。你不该来这里。在这片森林里，树木低吟那些被遗忘时代的秘密，阴影四处潜伏，耐心等待机会吞噬任何胆敢闪耀的光明。这里没有你这样冒险者与求知之人的容身之地……",
+  "halloween.sacrifice.intro.one": "据说在无月之夜，在古树之下，一位女巫聚集了地球上各样最强大的魂灵。",
+  "halloween.sacrifice.intro.two": "每个魂灵都有不同的回声，目光中各有其独特闪烁，每个魂灵都依据一条古老誓言被献给神圣之圆阵。",
+  "halloween.sacrifice.intro.three": "当所有的魂灵都到齐时，森林为之颤抖，在金绿交错的闪光中，一个强大的生物降临了，它被注入了被召唤者的力量和智慧。",
+  "halloween.sacrifice.intro.four": "只有了解每个魂灵奥秘并将它们完美融合的人，才有资格获得这种祝福……但要小心，因为这种力量不是谁都能拥有的。",
   "halloween.sacrifice.suggestion": "记住要仔细选择要献祭的熊。",
   "halloween.sacrifice.select.bears": "选择要献祭的熊",
-  "halloween.sacrifice.sacrifice": "献祭黑熊",
-  "halloween.sacrifice.empty": "您没有要献祭的熊",
-  "halloween.noticeboard.one": "万圣节快乐",
-  "halloween.noticeboard.two": "在本次活动中，您将发现一个限时万圣节门户，这里危险潜伏，只有最勇敢的乡巴佬才能生存下来！",
-  "halloween.noticeboard.three": "活动结束时，将向在传送门中得分最高的玩家发放特殊奖励！",
-  "halloween.noticeboard.four": "得分最高者将获得特别限量物品，而累计得分最高者（活动期间每天最佳得分的总和）将获得 SFL 美元奖励！",
-  "halloween.noticeboard.five": "您还可以向岛上的 NPC 捐款，捐款 3 POL 美元或更多的玩家将获得一份特别礼物！",
-  "easterEgg.halloweenTorchText": "你感到一种奇怪的感觉，仿佛森林在召唤你",
-  "cropMachine.readyCropPacks.description": "你目前有 {{totalReady}} 个作物包要收割！点击你想要收获的包裹。",
+  "halloween.sacrifice.sacrifice": "献祭熊熊",
+  "halloween.sacrifice.empty": "您没有可供献祭的熊",
+  "halloween.noticeboard.one": "万圣快乐",
+  "halloween.noticeboard.two": "在本次活动中，您将发现一个限时万圣节传送门，这里危机四伏，只有最勇敢的乡包佬才能绝境求生！",
+  "halloween.noticeboard.three": "活动结束时，传送门中得分最高的玩家将赢得特殊奖励！",
+  "halloween.noticeboard.four": "得分最高者将获得特别限量物品，而累计得分最高者（活动期间每天最佳得分的总和）将获得 $SFL 奖励！",
+  "halloween.noticeboard.five": "您还可以向岛上的 NPC 捐款，捐款 3 $POL 或更多的玩家将获得一份特别礼物！",
+  "easterEgg.halloweenTorchText": "你感到一种奇怪的感觉，仿佛森林在召唤你……",
+  "cropMachine.readyCropPacks.description": "您目前有 {{totalReady}} 个庄稼袋可供收割！点击您想要收获的庄稼袋。",
   "leaderboard.empty": "未找到排行榜。",
-  "description.cowScratcher": "一款质朴而有效的工具，非常适合在田里度过漫长的一天后给奶牛留下令人满意的抓痕。让你的牛群开心和满足！",
-  "description.spinningWheel": "这款纺车是一件优雅的工艺，可将生羊毛变成细线，是制作优质纺织品的必备品。",
-  "description.sleepyRug": "这款柔软的地毯既舒适又诱人，非常适合午睡。它为任何空间增添了温暖和魅力。",
-  "description.meteorite": "有传言说，这颗陨石是来自恒星的稀有而神秘的碎片，具有宇宙的力量。",
-  "description.sheafOfPlenty": "一捆在成熟期收获的大麦，象征着丰收和本季的辛勤工作。+2 大麦",
-  "description.mechanicalBull": "生动的景点和耐力的考验！跳上机械公牛，看看你能不能坚持下去。",
+  "description.cowScratcher": "一款质朴但有效的工具，非常适合在田里度过漫长一天后给奶牛挠幸福的痒痒。保持牛群的快乐满足！",
+  "description.spinningWheel": "这款纺车工艺精致，可将生羊毛转成细线，是制作优质织物的必备良品。",
+  "description.sleepyRug": "这款柔软的地毯既舒适又怡人，非常适合午睡；为所在之处增添温暖和魅力。",
+  "description.meteorite": "有传言说，来自恒星碎片的这颗陨石稀有而神秘，驾驭着宇宙的力量。",
+  "description.sheafOfPlenty": "一捆在成熟巅峰期收获的大麦，象征着丰收和当季的辛勤劳动。+2 大麦",
+  "description.mechanicalBull": "生机勃勃的景点和耐力考验！跳上机械公牛，看看你能不能坚持下去。",
   "description.dreamScarf.boost": "-20% 绵羊生产时间",
   "description.milkApron.boost": "+0.5 牛奶",
   "description.sheafOfPlenty.boost": "+2 大麦",
-  "digby.streakReward": "探索三个 {{name}} 以获得额外奖励。解锁每日连胜纪录以获得额外奖励。",
-  "double.delivery.hint": "Pssssst…… {{date}} 的配送将获得双倍奖励。",
+  "digby.streakReward": "发现三个 {{name}} 以获得额外奖励。解锁每日连胜以获得额外奖励。",
+  "double.delivery.hint": "噗嗤…… {{date}} 的送货将配置双倍奖励。",
   "halloween.portal.title": "小游戏-万圣节",
   "halloween.portal.description": "你能在迷宫里坚持下去吗？",
   "halloween.portal.missionObjectives": "任务：达到 {{targetScore}}。",
-  "halloween.portal.rewardMessage": "恭喜，你完成了任务！这是你的奖励。",
-  "craftingBox.welcome.1": "欢迎来到 Crafting Box！在这里，你可以用你的资源制作物品。",
-  "craftingBox.welcome.2": "将物品放入制作盒中，尝试发现新食谱。如果你找到食谱，它将保存在食谱下！",
-  "craftingBox.welcome.3": "是时候开始手工制作了！你想做什么？",
-  "craftingBox.startCrafting": "开始制作",
-  "craftingBox.viewRecipes": "查看食谱",
-  "craftingBoxGuide.selectResource": "选择要制作的资源。",
-  "craftingBoxGuide.craftItem": "开始制作。",
-  "craftingBoxGuide.failed": "如果找不到匹配项，制作将失败。",
-  "craftingBoxGuide.success": "如果找到匹配的物品，则会合成一件物品。",
-  "craftingBoxGuide.viewRecipe": "制作的物品将保存到您的食谱中。",
-  "description.infernalBullwhip": "这把险恶的牛鞭充满了火焰之力，使它既威慑又有效。-50% 喂给谷仓动物",
-  "description.chickenSuit": "穿上这款俏皮的小鸡套装，随心所欲地进入任何聚会！+1 羽毛",
+  "halloween.portal.rewardMessage": "恭喜，您完成了任务！这是您的奖励。",
+  "craftingBox.welcome.1": "欢迎来到锻打箱！在这里，您可以用您的资源锻造物品。",
+  "craftingBox.welcome.2": "将物品放入锻打箱中，尝试发现新配方。如果您发现了新配方，它将保存到配方栏目下！",
+  "craftingBox.welcome.3": "是时候开始锻造了！您想做什么？",
+  "craftingBox.startCrafting": "开始锻造",
+  "craftingBox.viewRecipes": "查看配方",
+  "craftingBoxGuide.selectResource": "选择资源以锻造。",
+  "craftingBoxGuide.craftItem": "开始锻造。",
+  "craftingBoxGuide.failed": "如果找不到对应配方，锻造将会失败。",
+  "craftingBoxGuide.success": "如果存在对应配方，物品锻造将会开始。",
+  "craftingBoxGuide.viewRecipe": "锻造过的物品将保存到您的配方中。",
+  "description.infernalBullwhip": "这把险恶的牛鞭充盈着火焰之力，既威慑又有效。-50% 畜棚动物饲料",
+  "description.chickenSuit": "穿上这款俏皮的小鸡套装，随心所欲畅游所有聚会！+1 羽毛",
   "description.cowbellNecklace": "这是一款适合所有乳制品爱好者的迷人项链，上面有奶牛无法抗拒的叮当小牛铃！+2 牛奶",
-  "description.blackSheepOnesie": "穿上这款柔软保暖的连体衣，在羊群中脱颖而出。这款迷人的黑羊服装为舒适的穿着增添了趣味性。+2 羊毛",
-  "description.merinoJumper": "这款舒适的毛衣采用最好的羊毛制成，提供无与伦比的保暖和舒适感。+1 美利奴羊毛",
-  "description.mooVer": "一种让奶牛保持活跃和健康的独特装置。+0.25 皮革",
-  "description.swissWhiskers": "这位技艺精湛的厨师是一位微型烹饪天才，凭借其专业技艺提升了每种奶酪食谱的品味。+500 奶酪食谱经验值",
-  "description.cluckulator": "这种专业秤可以精确地称量每只鸡，确保它们获得理想的饲料份量，以实现均衡生长和健康，从而提高家禽护理的效率和可持续性。-25% 鸡肉饲料",
-  "description.ufo": "据说这艘外星飞船会发出柔和的光芒和嗡嗡声，营造出奇迹和好奇的光环。密切关注天空——谁知道它会揭开什么超凡脱俗的秘密！",
-  "description.infernalBullwhip.boost": "-50% 饲料给谷仓动物",
+  "description.blackSheepOnesie": "穿上这款柔软保暖的皮套，在羊群中脱颖而出。这款迷人的黑羊服装为穿着舒适又增添了一分趣味。+2 羊毛",
+  "description.merinoJumper": "这款舒适的毛衣采用最好的羊毛制成，提供无与伦比的温暖与舒适。+1 美利奴羊毛",
+  "description.mooVer": "一种保持奶牛活泼和健康的独特装置。+0.25 皮革",
+  "description.swissWhiskers": "这位烹饪天才厨师身材微小，凭其专业技艺为每种奶酪食谱画龙点睛。+500 奶酪食谱经验值",
+  "description.cluckulator": "这种专业秤可以精确地称量每只鸡，保证健康均衡发育的理想饲料份量，家禽护理高效可持续。-25% 鸡饲料",
+  "description.ufo": "据说这艘外星飞船会发出柔和的光芒和嗡嗡声，笼罩着奇迹与惊奇的光环。时刻举目天空吧——谁知道它还会揭开什么超凡脱俗的秘密！",
+  "description.infernalBullwhip.boost": "-50% 畜棚动物饲料",
   "description.chickenSuit.boost": "+1 羽毛",
   "description.cowbellNecklace.boost": "+2 牛奶",
   "description.blackSheepOnesie.boost": "+2 羊毛",
   "description.merinoJumper.boost": "+1 美利奴羊毛",
   "description.mooVer.boost": "+0.25 皮革",
   "description.swissWhiskers.boost": "+500 奶酪食谱经验值",
-  "description.cluckulator.boost": "-25% 鸡肉饲料",
-  "chores.ended": "一直在告诉 Bumpkins 该怎么做…… 我累了。我想我需要休假。",
-  "digby.closed": "沙漠已关闭",
-  "digby.holiday": "沙漠今天关闭。稍后再来。",
-  "delivery.holiday": "已锁定",
-  "delivery.holiday.closingSoon": "这些 Bumpkins 要去度假了…… 在他们离开之前完成订单！",
-  "delivery.holiday.closed": "这些 Bumpkins 正在度假…… 稍后再来！",
+  "description.cluckulator.boost": "-25% 鸡饲料",
+  "chores.ended": "一直指挥乡包佬做这做那……我累了。我觉得我需要休假。",
+  "digby.closed": "沙漠已封闭",
+  "digby.holiday": "沙漠今天封闭。稍后再来。",
+  "delivery.holiday": "已冻结",
+  "delivery.holiday.closingSoon": "这些乡包佬要去度假了……在他们离开之前完成送货！",
+  "delivery.holiday.closed": "这些乡包佬正在度假……稍后再来！",
   "description.chicory.boost": "获得 1 次 10% 几率 +1 朵花卉的机会",
-  "description.chicory": "一种可以在牛市奔跑季节找到的突变花。",
+  "description.chicory": "一种可以在牛肆飞驰时季找到的变种花。",
   "description.longhorn.cowfish.boost": "+0.2 牛奶",
-  "description.lemon.shark": "一位热情活泼的夏日海域游泳运动员。仅在法老宝藏季节可用。",
-  "description.longhorn.cowfish": "一种奇特的箱鱼，有着角状的刺，像牛一样优雅地在海中游泳。",
-  "howToGetThisItem.longhornCowfish": "它是通过法老宝藏季的游戏玩法获得的。",
+  "description.lemon.shark": "一位热情活泼的夏日海域游泳运动员。仅在法老秘宝时季可钓取。",
+  "description.longhorn.cowfish": "一种奇特的箱鲀，有着角状的刺，像牛一样优雅地在海中游泳。",
+  "howToGetThisItem.longhornCowfish": "可于法老秘宝时季游玩获得。",
   "restrictionReason.sheepSleeping": "绵羊在睡觉",
   "restrictionReason.cowsSleeping": "奶牛在睡觉",
-  "chickens.deprecated.1": "现在鸡舍里喂鸡。",
-  "chickens.deprecated.2": "在 Garbo 出售现有鸡。",
-  "description.blackSheep": "一只害群之羊在你的农场里居住。",
-  "mailbox.whatsOn": "正在发生什么",
-  "whatsOn.bullRunBegins": "牛市开始了！",
-  "whatsOn.animalsAndCrafting": "动物与手工制作",
-  "whatsOn.theRaceBegins": "比赛开始了",
+  "chickens.deprecated.1": "鸡的喂养现在在鸡舍里进行。",
+  "chickens.deprecated.2": "请在哥布林回收处出售现有的、鸡舍外的鸡。",
+  "description.blackSheep": "一只黑羊在您的农场里住下了。",
+  "mailbox.whatsOn": "火热时讯",
+  "whatsOn.bullRunBegins": "牛肆飞驰时季开始了！",
+  "whatsOn.animalsAndCrafting": "动物与锻打箱",
+  "whatsOn.theRaceBegins": "竞速开始",
   "whatsOn.sflMarketplace": "SFL 市场",
   "whatsOn.auctionWeek": "拍卖周",
   "whatsOn.animalCompetition": "动物竞赛",
-  "whatsOn.mysterySeason": "神秘季节",
-  "whatsOn.bullRunText": "牛市季节开始了！拿起你的VIP旗帜，为比赛做准备。",
-  "whatsOn.cowSkullsText": "沙漠中出现了牛头骨和新的谜题！",
-  "whatsOn.choreBoardText": "全新的 7 天杂务板现已推出。",
+  "whatsOn.mysterySeason": "神秘时季",
+  "whatsOn.bullRunText": "牛肆飞驰时季开始了！带上您的 VIP 旗帜，为竞速做准备吧。",
+  "whatsOn.cowSkullsText": "沙漠出现了牛头骨和新的谜题！",
+  "whatsOn.choreBoardText": "全新的 7 天农活板现已推出。",
   "whatsOn.poppyShopText": "Poppy 的花店已经升级了。",
-  "whatsOn.animalsLiveText": "动物现在还活着！喂它们，给它们挤奶，剪掉它们等等！",
-  "whatsOn.craftingBoxText": "你现在可以建造一个手工盒并制作新物品了！",
-  "whatsOn.bedsText": "锻造 8 张床，解锁额外的农场手牌。",
-  "whatsOn.megastoreText": "在 Megastore 用马蹄铁换取 NFT 或在拍卖行赢取 NFT",
+  "whatsOn.animalsLiveText": "动物机制现已上线！喂养、挤奶、剪毛等等！",
+  "whatsOn.craftingBoxText": "您现在可以建造一个锻打箱并锻造新物品了！",
+  "whatsOn.bedsText": "锻造 8 张床，以解锁更多雇农。",
+  "whatsOn.megastoreText": "在超星商店用马蹄铁换取 NFT 或在拍卖行赢取 NFT",
   "whatsOn.sflMarketplaceText": "$SFL 市场现已上线！用 $SFL 兑换 NFT。",
-  "whatsOn.auctionText": "竞争并出价超过好友，争夺最好的 NFT！",
-  "whatsOn.animalCompetitionText": "完成动物任务并爬上排行榜，赢取奖品和$SFL！",
-  "whatsOn.mysterySeasonText": "准备好您的资源并掌控市场。神秘季节即将来临！",
+  "whatsOn.auctionText": "竞争并出价超过好友们，争夺最好的 NFT！",
+  "whatsOn.animalCompetitionText": "完成动物任务并攀登排行榜，赢取奖品和 $SFL ！",
+  "whatsOn.mysterySeasonText": "准备好您的资源并驾驭市场。神秘时季即将来临！",
   "whatsOn.date.nov1": "11 月 1 日",
   "whatsOn.date.nov4": "11 月 4 日",
-  "whatsOn.date.dec18Jan31": "12 月 18 日至 1 月 31 日",
+  "whatsOn.date.dec18Jan31": "12 月 18 日 至 1 月 31 日",
   "whatsOn.date.feb1": "2 月 1 日",
   "description.whiteSheepOnesie.boost": "+0.25 羊毛",
-  "description.whiteSheepOnesie": "穿上这款毛茸茸的羊毛连体衣放松身心，非常适合在广场度过舒适的夜晚或欢乐的一天！凭借其不可抗拒的魅力，你将成为牛群中最可爱的绵羊。0.25+ 羊毛",
+  "description.whiteSheepOnesie": "有这款毛茸茸的羊毛皮套放松身心，非常适合在广场度过舒适一夜或欢乐一天！凭借其不可抗拒的魅力，您将成为畜群中最可爱的绵羊。+0.25 羊毛",
   "time.millisecond.full": "毫秒",
   "time.milliseconds.full": "毫秒",
   "time.ms.med": "ms",
   "time.mss.med": "mss",
   "time.millisecond.short": "ms",
   "time.milliseconds.ago": "{{time}} {{millisecondORmilliseconds}} 之前",
-  "statements.mutant.animal": "恭喜，你发现了一只突变动物！",
+  "statements.mutant.animal": "恭喜，您发现了一只变种动物！",
   "competition.highscore": "最高分数",
-  "competition.accumulator": "累积分数",
+  "competition.accumulator": "累计分数",
   "description.basic.bear": "一只基本的熊。",
   "description.alien.chicken.boost": "+0.1 羽毛",
   "description.toxic.tuft.boost": "+0.1 美利奴羊毛",
   "description.mootant.boost": "+0.1 皮革",
-  "whatsOn.horseshoesText": "完成配送即可获得马蹄铁。",
-  "whatsOn.choresText": "完成琐事和赏金以赚取马蹄铁（11 月 11 日）",
-  "whatsOn.date.dec11Dec18": "12 月 9 日至 12 月 16 日",
-  "animals.guide.feeder": "使用喂食机为您的动物准备食物。",
-  "animals.guide.food_preference": "动物更喜欢自己喜欢的食物，但会吃任何食物。",
+  "whatsOn.horseshoesText": "完成送货即可获得马蹄铁。",
+  "whatsOn.choresText": "完成农活和赏金以赚取马蹄铁（11 月 11 日）",
+  "whatsOn.date.dec11Dec18": "12 月 9 日 至 12 月 16 日",
+  "animals.guide.feeder": "使用饲料机为您的动物准备食物。",
+  "animals.guide.food_preference": "动物更喜欢吃自己最爱的食物，但给什么食物也不会挑食。",
   "animals.guide.progress": "进度条填满后，你的动物就可以升级和掉落资源了。",
   "animals.guide.sleeping": "等级提升后，你的动物将睡觉 24 小时。",
   "animals.guide.affection": "在熟睡的动物提出要求时向他们表达爱意。",
@@ -4416,7 +4416,7 @@
   "whatsOn.date.dec2": "十二月",
   "marketplace.pricePerUnit": "{{price}} /单位",
   "description.babyPanda": "Gas Hero 活动中的一只可爱熊猫。2024 年 3 月为初学者提供双重体验。",
-  "description.miffy": "稀有的 Morchi。在 FSL 比赛期间（2024 年 10 月）将经验值翻倍。",
+  "description.miffy": "稀有的 Morchi。在 FSL 竞赛期间（2024 年 10 月）将经验值翻倍。",
   "npcDialogues.santa.intro1": "Ho Ho Ho Bumpkin！在限定时间内，我将为那些找到我散落的糖果的人提供每日奖励。",
   "npcDialogues.santa.intro2": "每天你会发现 10 块碎片散落在南瓜广场各处。",
   "npcDialogues.santa.intro3": "收集 10 个糖果并领取每日奖品！",
@@ -4635,7 +4635,7 @@
   "competition.prizes.one": "稀有动物 NFT 收藏品和可穿戴设备将赢取。",
   "competition.prizes.two": "50,000 瑞士法郎的奖池。",
   "competition.prizes.three": "如果你能打败开发者，可以获得奖励！",
-  "competition.rules.four": "排行榜将在比赛的最后 3 天隐藏。",
+  "competition.rules.four": "排行榜将在竞赛的最后 3 天隐藏。",
   "instantCook.confirmationMessage": "你确定要立即完成这个食谱吗？",
   "instantCook.costMessage": "这将花费你 {{gems}} 宝石",
   "competition.intro.two": "我们正在举办一场农业竞赛，以寻找游戏中最好的牧场主。",
