--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3206,9 +3206,10 @@
   "season.vip.access": "Season VIP Access",
   "season.vip.claim": "Claim your monthly seasonal airdrop.",
   "season.vip.description": "Dominate the season with perks, discounts, bonus tickets, airdrops and more!",
-  "season.vip.purchase": "Purchase VIP Items",
+  "season.vip.purchase": "Purchase VIP Access",
   "season.mystery.gift": "Mystery Gift",
   "season.xp.boost": "10% XP boost",
+
   "season.lifetime.farmer": "Lifetime Farmer",
   "season.free.with.lifetime": "Free with Lifetime Farmer",
   "season.bullRun.bonus": "10% less feed to feed animals",
