--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -3955,7 +3955,7 @@
   "description.blackSheepOnesie": "穿上这款柔软保暖的皮套，在羊群中脱颖而出。这款迷人的黑羊服装为穿着舒适又增添了一分趣味。+2 羊毛",
   "description.merinoJumper": "这款舒适的毛衣采用最好的羊毛制成，提供无与伦比的温暖与舒适。+1 美利奴羊毛",
   "description.mooVer": "一种保持奶牛活泼和健康的独特装置。+0.25 皮革",
-  "description.swissWhiskers": "这位烹饪天才厨师身材微小，凭其专业技艺为每种奶酪食谱画龙点睛。+500 奶酪食谱经验值",
+  "description.swissWhiskers": "这位烹饪天才厨师身材微小，凭其专业技艺为每种芝士食谱画龙点睛。+500 芝士食谱经验值",
   "description.cluckulator": "这种专业秤可以精确地称量每只鸡，保证健康均衡发育的理想饲料份量，家禽护理高效可持续。-25% 鸡饲料",
   "description.ufo": "据说这艘外星飞船会发出柔和的光芒和嗡嗡声，笼罩着奇迹与惊奇的光环。时刻举目天空吧——谁知道它还会揭开什么超凡脱俗的秘密！",
   "description.infernalBullwhip.boost": "-50% 畜棚动物饲料",
@@ -3964,7 +3964,7 @@
   "description.blackSheepOnesie.boost": "+2 羊毛",
   "description.merinoJumper.boost": "+1 美利奴羊毛",
   "description.mooVer.boost": "+0.25 皮革",
-  "description.swissWhiskers.boost": "+500 奶酪食谱经验值",
+  "description.swissWhiskers.boost": "+500 芝士食谱经验值",
   "description.cluckulator.boost": "-25% 鸡饲料",
   "chores.ended": "一直指挥乡包佬做这做那……我累了。我觉得我需要休假。",
   "digby.closed": "沙漠已封闭",
@@ -4027,80 +4027,80 @@
   "whatsOn.date.dec11Dec18": "12 月 9 日 至 12 月 16 日",
   "animals.guide.feeder": "使用饲料机为您的动物准备食物。",
   "animals.guide.food_preference": "动物更喜欢吃自己最爱的食物，但给什么食物也不会挑食。",
-  "animals.guide.progress": "进度条填满后，你的动物就可以升级和掉落资源了。",
-  "animals.guide.sleeping": "等级提升后，你的动物将睡觉 24 小时。",
-  "animals.guide.affection": "在熟睡的动物提出要求时向他们表达爱意。",
-  "animals.guide.bounties": "用你的动物换取奖励，完成每周的赏金。",
-  "animals.guide.sickness": "当心疾病！年龄较大的动物更容易受到感染——使用 Barn Delight 药物来治愈它们。",
-  "description.alien.chicken": "一只来自另一个星系的奇特小鸡，可以提高你的羽毛产量！",
-  "description.toxic.tuft": "一只变异的绵羊，它的有毒羊毛能产出这片土地上最好的美利奴羊毛！",
+  "animals.guide.progress": "进度条填满后，您的动物就可以升级和掉落资源了。",
+  "animals.guide.sleeping": "等级提升后，您的动物将睡 24 小时。",
+  "animals.guide.affection": "在熟睡的动物渴望时爱抚他们。",
+  "animals.guide.bounties": "用您的动物完成每周赏金换取奖励。",
+  "animals.guide.sickness": "当心染病！年龄较大的动物更容易受到感染——使用 Barn Delight 药物来治愈它们。",
+  "description.alien.chicken": "一只来自另一星系的奇特小鸡，可以提高您的羽毛产量！",
+  "description.toxic.tuft": "一只变种绵羊，它的毒素羊毛能产出这片土地上最好的美利奴羊毛！",
   "description.mootant": "这种经过基因改造的牛可以提高您的皮革产量！",
   "animal.noFoodMessage": "未选择任何食物",
-  "description.speed.chicken.two": "产卵速度加快 10%。",
-  "description.fat.chicken.one": "现在，您的鸡每次喂食所需的食物将减少 10%。",
-  "description.fat.chicken.two": "喂鸡所需的食物减少了10％。",
-  "description.rich.chicken.one": "你的鸡现在可以再产出 0.1 个鸡蛋。",
-  "description.rich.chicken.two": "这种突变鸡增加了+0.1的产蛋量。",
-  "description.ayam.cemani": "向日葵之地最稀有的鸡！",
-  "description.undead.rooster": "战争的不幸牺牲品。+0.1 个鸡蛋产量。",
+  "description.speed.chicken.two": "产蛋速度加快 10%。",
+  "description.fat.chicken.one": "现在，您的鸡每次喂食所需的饲料将减少 10%。",
+  "description.fat.chicken.two": "喂鸡所需的饲料减少了 10％。",
+  "description.rich.chicken.one": "您的鸡现在可以产出多 0.1 个鸡蛋。",
+  "description.rich.chicken.two": "这种变种鸡增加了 0.1 的产蛋量。",
+  "description.ayam.cemani": "Sunflower Land 最稀有的鸡！",
+  "description.undead.rooster": "战争的不幸牺牲品。+0.1 鸡蛋产量。",
   "description.bale": "提高鸡蛋产量。",
   "description.bale.boost": "+0.1 蛋",
   "description.fat.chicken.boost": "-10% 鸡肉饲料",
   "description.el.pollo.veloz.boost": "-2 小时鸡蛋生产时间",
   "description.farm.dog.boost": "-25% 绵羊生产时间",
-  "description.free.range": "+0.1 动物产品",
+  "description.free.range": "+0.1 动物产出",
   "description.chicken.coop": "可以用来养鸡的鸡舍。使用这种稀有鸡舍来增加产蛋量。",
-  "description.gold.egg": "一个金蛋。众所周知，里面的东西是好运的载体。",
-  "season.codex.howToEarn.two": "为 Bumpkins 完成家务。（11月11日）",
+  "description.gold.egg": "一个金蛋。里面所填之物，众所周知，承载着好运。",
+  "season.codex.howToEarn.two": "为乡包佬完成农活。（11月11日）",
   "season.codex.howToEarn.three": "交易动物和花卉赏金！（11月11日）",
   "description.cowboyHat.boost": "+1 马蹄铁",
   "description.cowboyShirt.boost": "+1 马蹄铁",
   "description.cowboyTrouser.boost": "+1 马蹄铁",
-  "season.codex.howToEarn.comingSoon": "从杂务、送货和赏金中赚取马蹄铁！",
-  "description.cropCircle": "你的农场里出现了一个神秘的圆圈…… 这可能意味着什么？",
-  "description.omnifeed": "是所有动物的最佳饲料。",
-  "description.brush": "动物画笔。用它来表达对动物的爱意。",
-  "description.music.box": "为动物播放音乐。用它来表达对动物的爱意。",
+  "season.codex.howToEarn.comingSoon": "从农活、送货和赏金中赚取马蹄铁！",
+  "description.cropCircle": "您的农场里出现了一个神秘的圆阵……这会是意味着什么？",
+  "description.omnifeed": "所有动物的最佳饲料。",
+  "description.brush": "动物毛刷。用来表达对动物的爱意。",
+  "description.music.box": "给动物播放音乐。用来表达对动物的爱意。",
   "levelUpMax": "最高等级！",
-  "birdieplaza.choresAndRewards": "你还可以通过每周琐事、每日宝箱奖励、伯特的 Odd Obsession 和赏金系统获得 {{seasonalTicket}} s！",
-  "description.community.coin": "(WIP) 一枚有价值的硬币，留待将来在向日葵之地使用。",
-  "bedsMigration.bedsNeededDescription2": "每张独特的床可以让一只农场的手睡觉。",
-  "bedsMigration.bedsNeededDescription3": "放置床位以雇用更多的农民！",
-  "bedsMigration.status.occupied": "已占领",
+  "birdieplaza.choresAndRewards": "您还可以通过每周农活、每日宝箱奖励、Bert 的奇妙痴玩和赏金系统获得 {{seasonalTicket}} ！",
+  "description.community.coin": "(WIP) 一枚高价值的硬币，留待将来在 Sunflower Land 使用。",
+  "bedsMigration.bedsNeededDescription2": "每张床都可以单独给一个雇农睡觉。",
+  "bedsMigration.bedsNeededDescription3": "放置床位以雇用更多的雇农！",
+  "bedsMigration.status.occupied": "已占用",
   "bedsMigration.status.unoccupied": "空的",
   "bedsMigration.status.notPlaced": "未放置",
-  "bedsMigration.farmHandCount": "{{count}} /8",
+  "bedsMigration.farmHandCount": "{{count}} / 8",
   "bedsMigration.label": "我的床",
-  "whatsOn.auction.tickets": "本周的琐事和赏金不容错过。",
+  "whatsOn.auction.tickets": "本周的农活和赏金不奖励马蹄铁。",
   "restrictionReason.chickensSleeping": "鸡在睡觉",
   "description.cheese": "芝士。由新鲜牛奶制成的美味乳制品",
-  "description.pizzaMargherita": "玛格丽特披萨。经典的意大利披萨，里面有番茄和奶酪",
-  "description.blueCheese": "蓝芝士。带有蓝霉的味道浓郁的奶酪",
-  "description.honeyCheddar": "蜂蜜奶酪。一种注入蜂蜜的甜味和咸味奶酪",
-  "description.capreseSalad": "卡布里沙拉。含有奶酪、西红柿和羽衣甘蓝的新鲜沙拉",
+  "description.pizzaMargherita": "玛格丽特披萨。经典的意大利披萨，带有番茄和芝士",
+  "description.blueCheese": "蓝纹芝士。青霉菌发酵的、味道浓郁的芝士",
+  "description.honeyCheddar": "蜂蜜车达。一种融入蜂蜜的甜鲜芝士",
+  "description.capreseSalad": "卡布里沙拉。含有芝士、西红柿和羽衣甘蓝的新鲜沙拉",
   "description.sourShake": "暴打酸饮。一款浓郁清爽的柠檬饮品",
-  "description.spaghettiLimone": "柠檬意面。一道含有柠檬和奶酪的美味意大利面",
-  "description.lemonCheesecake": "柠檬芝士蛋糕。带有柑橘味的奶油芝士蛋糕",
-  "gems.shipment.useGems": "使用宝石解锁更多库存",
-  "whatsOn.date.nov6Dec11": "11 月 6 日至 1 月 31 日",
-  "ingredients": "食材",
-  "landscape.superTotem.resourceNodeCondition": "在激活 {{selectedChestItem}} 之前，请确保没有矿物质或树木在再生，没有庄稼或水果生长，烹饪建筑物不起作用。",
-  "description.kingOfBears": "所有熊之王。它有能力生产更多的蜂蜜供自己食用。",
+  "description.spaghettiLimone": "柠檬意面。一道含有柠檬和芝士的鲜香意大利面",
+  "description.lemonCheesecake": "柠檬芝士蛋糕。带点柑橘新奇的奶油芝士蛋糕",
+  "gems.shipment.useGems": "使用宝石来更大批量补货",
+  "whatsOn.date.nov6Dec11": "11 月 6 日 至 1 月 31 日",
+  "ingredients": "原料",
+  "landscape.superTotem.resourceNodeCondition": "在激活 {{selectedChestItem}} 之前，请确保没有基矿或树木正在恢复、没有庄稼或水果正在生长、没有烹饪建筑物正在工作，以取得最佳效果。",
+  "description.kingOfBears": "万熊之王。有能力促使生产更多的蜂蜜供自己食用。",
   "description.halloweenScarecrow": "看上去很恐怖的稻草人",
   "description.vampireBear": "别把我放在阳光下！",
-  "description.superTotem": "作物、树木、水果、烹饪和矿物质的速度为 2 倍。持续 7 天",
-  "description.kingOfBears.boost": "提高每个满蜂箱的蜂蜜产量 +0.25",
-  "description.superTotem.boost": "作物、矿物、水果、烹饪和植树时间减少 50%",
-  "description.super.totem.expired": "您的超级图腾已过期。前往南瓜广场，发现并制作更多魔法物品，提升你的耕作能力！",
-  "description.super.totem.temporarily": "超级图腾可暂时延长您的烹饪、作物、树木和矿物时间。充分利用它！",
+  "description.superTotem": "庄稼、树木、水果、烹饪和基矿的速度提为 2 倍。持续 7 天",
+  "description.kingOfBears.boost": "提高每个满载蜂箱的蜂蜜产量 +0.25",
+  "description.superTotem.boost": "庄稼、基矿、水果、烹饪和树木的相关时间减少 50%",
+  "description.super.totem.expired": "您的超级图腾已过期。前往南瓜广场，发现并制作更多魔法物品，提升您的耕作能力！",
+  "description.super.totem.temporarily": "超级图腾可暂时增益您的烹饪、庄稼、树木和基矿的相关时间。充分利用它！",
   "season.bullRun.bonus": "喂动物的饲料减少 10%",
-  "gems.noShipment": "不发货",
-  "gems.buyStock": "请购买您的库存以发货。",
-  "npcDialogues.pumpkinPete.chore1": "你看到天空中的奇怪物体了吗？留意你的庄稼！",
+  "gems.noShipment": "无补货",
+  "gems.buyStock": "请下令购买补货以获得补充。",
+  "npcDialogues.pumpkinPete.chore1": "你看到天空中的奇怪物体了吗？留心你的庄稼！",
   "npcDialogues.pumpkinPete.chore2": "这些新的动物产品带来了许多新的农业可能性！",
-  "npcDialogues.pumpkinPete.chore3": "有了所有这些新资源，农贸市场比以往任何时候都更加繁忙！",
+  "npcDialogues.pumpkinPete.chore3": "有了所有这些新资源，农贸市场比以往任何时候都更加繁闹！",
   "npcDialogues.peggy.chore1": "我几乎跟不上所有这些新食谱的要求！每个人都想尝试用动物产品做饭。",
-  "npcDialogues.peggy.chore2": "这些新的奶酪和鸡蛋食谱让我在厨房忙得不可开交。",
+  "npcDialogues.peggy.chore2": "这些新的芝士和鸡蛋食谱让我在厨房忙得不可开交。",
   "npcDialogues.peggy.chore3": "我希望你在烹饪时不要使用任何宝石…… 那太糟糕了！",
   "npcDialogues.betty.chore1": "农贸市场从未如此繁忙过！我们的小麦、玉米和大麦缺货了。",
   "npcDialogues.betty.chore2": "现在每个人都需要动物饲料。需求激增！",
@@ -4120,7 +4120,7 @@
   "npcDialogues.finley.chore1": "你不会相信我在海里看到的 —— 一个奇怪的像牛一样的生物！",
   "npcDialogues.finley.chore2": "我的兄弟芬恩可能会讲高谈阔论，但我所看到的是真实的。",
   "npcDialogues.finley.chore3": "最近水域有所不同，那里的情况正在发生变化。",
-  "npcDialogues.gordo.chore1": "你尝试过新的奶酪食谱吗？简直太棒了！",
+  "npcDialogues.gordo.chore1": "你尝试过新芝士食谱吗？简直太棒了！",
   "npcDialogues.gordo.chore2": "全新的意大利面条和披萨菜令人垂涎三尺了！",
   "npcDialogues.gordo.chore3": "这些动物产品正在彻底改变我们的美食！",
   "npcDialogues.tywin.chore1": "我正在对所有动物产品征收新税。皇冠必须获利！",
@@ -4736,11 +4736,11 @@
   "description.harvest.hourglass.boost": "-25% 作物生长时间",
   "description.harvest.hourglass.boost.effectTime": "持续 6 小时",
   "description.timber.hourglass.boost.effectTime": "持续 4 小时",
-  "description.ore.hourglass.boost": "-50% 矿物回收时间",
+  "description.ore.hourglass.boost": "-50% 基矿恢复时间（请提前放置）",
   "description.ore.hourglass.boost.effectTime": "持续 3 小时",
-  "description.orchard.hourglass.boost": "-25% 水果生长时间",
+  "description.orchard.hourglass.boost": "-25% 水果生长时间（请提前放置）",
   "description.orchard.hourglass.boost.effectTime": "持续 6 小时",
-  "description.fishers.hourglass.boost": "50% 几率获得 +1 条鱼",
+  "description.fishers.hourglass.boost": "50% 几率 +1 条鱼（单独概率）（请提前放置）",
   "description.fishers.hourglass.boost.effectTime": "持续 4 小时",
   "description.blossom.hourglass.boost": "-25% 花朵生长时间",
   "description.blossom.hourglass.boost.effectTime": "持续 4 小时",
