--- a/src/lib/i18n/dictionaries/id.json
+++ b/src/lib/i18n/dictionaries/id.json
@@ -4405,7 +4405,7 @@
   "marketplace.quickswap": "Penukaran cepat",
   "marketplace.quickswap.description": "Anda akan diarahkan ke Quickswap, pertukaran yang terdesentralisasi dan digerakkan oleh komunitas untuk membeli $SFL.",
   "marketplace.quickswap.warning": "Harga yang ditampilkan dalam game diperkirakan berdasarkan harga komunitas & mungkin tidak mencerminkan pasar saat ini. Lanjutkan dengan risiko Anda sendiri.",
-  "marketplace.estimated.price": "*Perkiraan harga SFL/USD",
+  "marketplace.estimated.price": "*Perkiraan harga USD/SFL",
   "marketplace.quickswap.continue": "Lanjutkan",
   "marketplace.about": "Tentang",
   "marketplace.wantToUnlock": "Ingin membuka perdagangan tanpa batas?",
