--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -2904,7 +2904,7 @@
   "marketplace.cosmeticsDescription": "Украсьте свою ферму редкими предметами",
   "marketplace.currentPrice": "Текущая цена",
   "marketplace.description": "Описание",
-  "marketplace.estimated.price": "*Ориентировочная цена SFL/USD",
+  "marketplace.estimated.price": "*Ориентировочная цена USD/SFL",
   "marketplace.expiry": "Действительно до",
   "marketplace.from": "От",
   "marketplace.hoarding": "Требуется прогресс магазина",
