--- a/src/lib/i18n/dictionaries/de.json
+++ b/src/lib/i18n/dictionaries/de.json
@@ -4405,7 +4405,7 @@
   "marketplace.quickswap": "Schneller Tausch",
   "marketplace.quickswap.description": "Sie werden bald zu Quickswap weitergeleitet, einer dezentralen und von der Community betriebenen Börse, um $SFL zu kaufen.",
   "marketplace.quickswap.warning": "Die im Spiel angegebenen Preise basieren auf Community-Preisen und spiegeln möglicherweise nicht den aktuellen Markt wider. Fahren Sie auf eigenes Risiko fort.",
-  "marketplace.estimated.price": "*Geschätzter SFL/USD-Preis",
+  "marketplace.estimated.price": "*Geschätzter USD/SFL-Preis",
   "marketplace.quickswap.continue": "Weiter",
   "marketplace.about": "Über",
   "marketplace.wantToUnlock": "Willst du unbegrenzt viele Trades freischalten?",
