--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4711,7 +4711,7 @@
   "marketplace.quickswap": "Quickswap",
   "marketplace.quickswap.description": "You are about to be redirected to Quickswap, a decentralized and community-driven exchange to buy $SFL.",
   "marketplace.quickswap.warning": "Prices shown in-game are estimated based on community prices & may not reflect the current market. Proceed at your own risk.",
-  "marketplace.estimated.price": "*Estimated SFL/USD price",
+  "marketplace.estimated.price": "*Estimated USD/SFL price",
   "marketplace.quickswap.continue": "Continue",
   "marketplace.about": "About",
   "marketplace.wantToUnlock": "Want to unlock unlimited trades?",
