--- a/src/lib/i18n/dictionaries/ms.json
+++ b/src/lib/i18n/dictionaries/ms.json
@@ -4405,7 +4405,7 @@
   "marketplace.quickswap": "Pertukaran pantas",
   "marketplace.quickswap.description": "Anda akan diarahkan ke Quickswap, pertukaran terdesentralisasi dan didorong oleh komuniti untuk membeli $SFL.",
   "marketplace.quickswap.warning": "Harga yang ditunjukkan dalam permainan dianggarkan berdasarkan harga komuniti & mungkin tidak mencerminkan pasaran semasa. Teruskan dengan risiko anda sendiri.",
-  "marketplace.estimated.price": "*Anggaran harga SFL/USD",
+  "marketplace.estimated.price": "*Anggaran harga USD/SFL",
   "marketplace.quickswap.continue": "Teruskan",
   "marketplace.about": "Mengenai",
   "marketplace.wantToUnlock": "Mahu membuka kunci dagangan tanpa had?",
