--- a/src/lib/i18n/dictionaries/tr.json
+++ b/src/lib/i18n/dictionaries/tr.json
@@ -4405,7 +4405,7 @@
   "marketplace.quickswap": "Hızlı Değişim",
   "marketplace.quickswap.description": "$SFL satın almak için merkezi olmayan ve topluluk odaklı bir borsa olan Quickswap'a yönlendirilmek üzeresiniz.",
   "marketplace.quickswap.warning": "Oyun içinde gösterilen fiyatlar topluluk fiyatlarına göre tahmin edilir ve mevcut pazarı yansıtmayabilir. Kendi sorumluluğunuzda ilerleyin.",
-  "marketplace.estimated.price": "*Tahmini SFL/USD fiyatı",
+  "marketplace.estimated.price": "*Tahmini USD/SFL fiyatı",
   "marketplace.quickswap.continue": "Devamı",
   "marketplace.about": "Hakkında",
   "marketplace.wantToUnlock": "Sınırsız alım satımın kilidini açmak ister misiniz?",
