--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -1455,7 +1455,7 @@
   "description.horse.whisperer": "Увеличение шанса на получение мутантов",
   "description.horsemackerel.one": "Спидстер с блестящим покрытием, всегда мчится по волнам.",
   "description.horsemackerel.two": "Галопом по вкусам с каждым укусом!",
-  "description.horseshoe": "Ценная подкова — обмен на награды!",
+  "description.horseshoe": "Ценная подкова — обмен на награды!",        
   "description.hourglass.expired": "Твой {{hourglass}} закончился. Время найти еще один!",
   "description.hourglass.running": "Этот {{hourglass}} дает временное ускорение для {{boost}}.",
   "description.house": "Место, где можно отдохнуть",
@@ -1878,6 +1878,7 @@
   "description.tomato.bombard.boost": "+1 Помидор",
   "description.tomato.clown.boost": "-50% времени роста у Томатов",
   "description.toolshed": "Увеличь свой запас инструментов на 50%",
+  "description.tornadoPinwheel": "Волшебный ветряк, защищает вас от торнадо! Только для одноразового использования.",
   "description.tough.tree": "Шанс получить 3x Дерева",
   "description.town.center": "Пройдись по центру города, если хочешь узнать последние новости",
   "description.town.sign": "С гордостью показывает номер твоей фермы!",
@@ -2534,6 +2535,7 @@
   "guide.factionPet.one": "Каждую неделю питомец будет просить 3 разных вида еды. При кормежке, опыт будет идти в общий счет фракции.",
   "guide.factionPet.six": "За каждую доставленную еду вы будете получать баллы. Каждый раз, когда вы доставляете товар, вознаграждение будет уменьшаться. Эти награды будут обновляться ежедневно. Игроки, получившие бонус в виде эмблемы, получат дополнительный бонус в зависимости от бонусного ранга фракции.",
   "guide.factionPet.three": "Если фракция не достигнет цели, питомец проспит целую неделю.",
+  "guide.factionPet.two": "У вашей фракции будет цель xp, которую нужно достичь каждую неделю. Если фракция достигнет цели, то цель следующей недели будет на 25% больше, чем цель предыдущей недели! Если цель не будет достигнута, она будет сброшена до 1000 умноженное на кол-во членов фракции.",
   "guide.intro": "От скромных начинаний до экспертного фермерства, этот гайд ответит на все твои вопросы!",
   "guide.streak.beyond": "После 8-й недели питомец должен быть сытым каждую неделю, чтобы сохранить бонус.",
   "guide.streak.four": "Если животное живо на 8 неделю, то все, кто его кормил, на 7 неделе получат бонус в 50% опыта в течение 8 недели и далее*",
@@ -2903,7 +2905,7 @@
   "marketplace.cosmeticsDescription": "Украсьте свою ферму редкими предметами",
   "marketplace.currentPrice": "Текущая цена",
   "marketplace.description": "Описание",
-  "marketplace.estimated.price": "*Ориентировочная цена USD/SFL",
+  "marketplace.estimated.price": "*Ориентировочная цена SFL|USD",
   "marketplace.expiry": "Действительно до",
   "marketplace.from": "От",
   "marketplace.hoarding": "Требуется прогресс магазина",
@@ -4449,6 +4451,9 @@
   "temperateSeason.possibleEvents": "Возможные события",
   "temperateSeason.seasonDetails": "Сведения о сезоне",
   "temperateSeason.seasonalCrops": "Сезонные культуры",
+  "temperateSeason.weatherShop.buy.comingSoon": "Скоро — 1 февраля",
+  "temperateSeason.weatherShop.buy.description": "Покупайте предметы, чтобы защитить свою ферму от непогоды",
+  "temperateSeason.weatherShop.weather": "Погода",
   "test": "Тест",
   "thank.you": "Спасибо!",
   "tieBreaker.betterLuck": "Время съесть еще тортов! В следующий раз повезет больше.",
@@ -4489,6 +4494,17 @@
   "time.secs.med": "сек",
   "timeToChop.description": "Создать 500 топоров",
   "tools": "Инструменты",
+  "tornado": "Торнадо",
+  "tornado.building.destroyed.description": "На вашей ферме бушует торнадо — это здание небезопасно! Пожалуйста, дождитесь окончания торнадо.",
+  "tornado.crops.destroyed": "Разрушения от торнадо",
+  "tornado.crops.destroyed.description": "Торнадо уничтожил половину вашего урожая. Пожалуйста, дождитесь окончания торнадо.",
+  "tornado.destroyed.one": "О нет! Торнадо разрушает вашу ферму!",
+  "tornado.destroyed.three": "Некоторые из ваших зданий были повреждены.",
+  "tornado.destroyed.two": "Некоторые из ваших посевов были уничтожены.",
+  "tornado.protected.one": "Вы защитили свою ферму от торнадо!",
+  "tornado.protected.three": "Ни одно из ваших зданий не пострадало.",
+  "tornado.protected.two": "Ни один из ваших посевов не был уничтожен.",
+  "tornado.specialEvent": "Специальное событие - Торнадо",
   "total": "Всего",
   "trader.PoH": "Для этой функции необходимо подтверждение \"личности\". Пожалуйста, сделай быстрое селфи.",
   "trader.buyer.pays": "Покупатель заплатит",
@@ -4752,21 +4768,5 @@
   "worm.grub": "Сочная личинка - идеальный вариант для продвинутых рыболовов.",
   "worm.redWiggler": "Экзотический червь, для самых элитных рыб.",
   "yes": "Да",
-  "yes.please": "Да, пожалуйста",
-  "description.tornadoPinwheel": "Волшебная вертушка, защищающая вас от торнадо! Только для одноразового использования.",
-  "temperateSeason.weatherShop.weather": "Погода",
-  "temperateSeason.weatherShop.buy.description": "Покупайте предметы, чтобы защитить свою ферму от непогоды",
-  "temperateSeason.weatherShop.buy.comingSoon": "Скоро — 1 февраля",
-  "tornado": "Торнадо",
-  "tornado.crops.destroyed": "Разрушение торнадо",
-  "tornado.crops.destroyed.description": "Торнадо уничтожил половину вашего урожая. Пожалуйста, дождитесь окончания торнадо.",
-  "tornado.building.destroyed.description": "На вашей ферме бушует торнадо — это здание небезопасно! Пожалуйста, дождитесь окончания торнадо.",
-  "tornado.protected.one": "Вы защитили свою ферму от торнадо!",
-  "tornado.protected.two": "Ни один из ваших посевов не был уничтожен.",
-  "tornado.protected.three": "Ни одно из ваших зданий не пострадало.",
-  "tornado.destroyed.one": "О нет! Торнадо разрушает вашу ферму!",
-  "tornado.destroyed.two": "Некоторые из ваших посевов были уничтожены.",
-  "tornado.destroyed.three": "Некоторые из ваших зданий были повреждены.",
-  "tornado.specialEvent": "Специальное событие - Tornado",
-  "guide.factionPet.two": "Каждую неделю ваша фракция будет получать очки опыта, которые они должны достичь. Если фракция достигнет цели, цель на следующей неделе будет на 25% больше, чем цель предыдущей недели! Если цель не будет достигнута, количество членов фракции будет увеличено до 1000 раз."
-}
+  "yes.please": "Да, пожалуйста"
+  }
