--- a/src/lib/i18n/dictionaries/en.json
+++ b/src/lib/i18n/dictionaries/en.json
@@ -4759,6 +4759,7 @@
   "temperateSeason.acknowledge": "Got it!",
   "temperateSeason.possibleEvents": "Possible Events",
   "description.tornadoPinwheel": "A magical pinwheel that protects you from the tornado! One-use only.",
+  "description.mangrove": "A mangrove that protects you from the tsunami! One-use only.",
   "temperateSeason.weatherShop.weather": "Weather",
   "temperateSeason.weatherShop.buy.description": "Buy items to protect your farm from the weather",
   "temperateSeason.weatherShop.buy.comingSoon": "Coming soon - February 1st",
