--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -1455,7 +1455,7 @@
   "description.horse.whisperer": "Увеличение шанса на получение мутантов",
   "description.horsemackerel.one": "Спидстер с блестящим покрытием, всегда мчится по волнам.",
   "description.horsemackerel.two": "Галопом по вкусам с каждым укусом!",
-  "description.horseshoe": "Ценная подкова — обмен на награды!",
+  "description.horseshoe": "Ценная подкова — обмен на награды!",        
   "description.hourglass.expired": "Твой {{hourglass}} закончился. Время найти еще один!",
   "description.hourglass.running": "Этот {{hourglass}} дает временное ускорение для {{boost}}.",
   "description.house": "Место, где можно отдохнуть",
@@ -2431,6 +2431,10 @@
   "gameOptions.generalSettings.lightMode": "Светлый режим",
   "gameOptions.generalSettings.share": "Поделиться",
   "gameOptions.logout": "Выход из аккаунта",
+  "gameOptions.notifications": "Уведомления",
+  "gameOptions.notifications.update": "Обновить настройки",
+  "gameOptions.notifications.updated": "Настройки обновлены",
+  "gameOptions.notifications.updating": "Обновление настроек",
   "gameOptions.plazaSettings": "Настройки Плазы",
   "gameOptions.plazaSettings.changeServer": "Сменить сервер",
   "gameOptions.plazaSettings.keybinds.description": "Хотите узнать, какие сочетания клавиш доступны? Проверьте их здесь.",
@@ -2535,7 +2539,7 @@
   "guide.factionPet.one": "Каждую неделю питомец будет просить 3 разных вида еды. При кормежке, опыт будет идти в общий счет фракции.",
   "guide.factionPet.six": "За каждую доставленную еду вы будете получать баллы. Каждый раз, когда вы доставляете товар, вознаграждение будет уменьшаться. Эти награды будут обновляться ежедневно. Игроки, получившие бонус в виде эмблемы, получат дополнительный бонус в зависимости от бонусного ранга фракции.",
   "guide.factionPet.three": "Если фракция не достигнет цели, питомец проспит целую неделю.",
-  "guide.factionPet.two": "У вашей фракции будет цель xp, которую нужно достичь каждую неделю. Если фракция достигнет цели, то цель следующей недели будет на 25% больше, чем цель предыдущей недели! Если цель не будет достигнута, она будет сброшена до 1000 умноженное на кол-во членов фракции.",
+  "guide.factionPet.two": "У вашей фракции будет цель опыта, которую нужно достичь каждую неделю. Если фракция достигнет цели, то цель следующей недели будет на 25% больше, чем цель предыдущей недели! Если цель не будет достигнута, она будет сброшена до 1000 умноженное на кол-во членов фракции.",
   "guide.intro": "От скромных начинаний до экспертного фермерства, этот гайд ответит на все твои вопросы!",
   "guide.streak.beyond": "После 8-й недели питомец должен быть сытым каждую неделю, чтобы сохранить бонус.",
   "guide.streak.four": "Если животное живо на 8 неделю, то все, кто его кормил, на 7 неделе получат бонус в 50% опыта в течение 8 недели и далее*",
@@ -4065,6 +4069,7 @@
   "scavenger.guide.two": "Еще одна возможность это сбор диких или магических грибов, которые спонтанно появляются на твоей ферме и близлежащих островах. Эти грибы можно собирать бесплатно и использовать в рецептах, квестах и крафте. Следи за грибами, так как максимальное количество грибов на твоей ферме не должно превышать 5 штук для диких грибов и 3 штук для магических. Если на ферме нет места, грибы появятся на соседних островах, чтобы ты не упустил эти ценные ресурсы.",
   "sceneDialogues.chefIsBusy": "Шеф занят",
   "search": "Поиск",
+  "searchHere": "Ищите здесь...",
   "searching": "Ищем",
   "season.access": "У тебя есть доступ к",
   "season.banner": "Сезонный баннер",
@@ -4168,7 +4173,7 @@
   "skill.claimed": "Заявлено",
   "skill.cluckyGrazing.buff": "-25% корма для кормления цыплят",
   "skill.cluckyGrazing.debuff": "+50% корма для других животных",
-  "skill.coinSwindler": "+10% монет при продаже урожая (Seed Shop)",
+  "skill.coinSwindler": "+10% монет при продаже урожая в магазин",
   "skill.compostingBonanza.buff": "Ускорьте компостеры еще на час при прокачке",
   "skill.compostingBonanza.debuff": "В 2 раза больше ресурсов для улучшения компостеров",
   "skill.compostingOverhaul.buff": "+2 Вормс",
