--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4970,7 +4970,7 @@
   "description.celestine": "A rare berry that grows in the dark.",
   "searchHere": "Search here...",
   "reputation.title": "Reputation",
-  "reputation.description": "Increase your reputation to unlock new Web3 features!",
+  "reputation.description": "Increase your reputation to unlock more Web3 features!",
   "reputation.sprout.description": "1 Marketplace Trade per day",
 
   "reputation.points": "{{amount}} Points",
